make sure images in theme don't overflow content area

--- a/gallery/css/default.css
+++ b/gallery/css/default.css
@@ -205,3 +205,7 @@ ul.filters li{
   display: inline-block;
   margin-left: 30px;
 }
+
+.figure img{
+  max-width: 100%;
+}
